[package]
name = "nadouf-math"
version = "0.1.1"
edition = "2024"
authors = ["Nadouvvv <nadoufmail@gmail.com>"]
description = "fast and safety python library"
license = "MIT"
repository = "https://github.com/CrabNadouf/Nadouf_Math_Library"
readme = "README.md"

[lib]
name = "nadouf_math"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
