[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nadouf-math"
version = "0.1.1"
description = "fast and safety python library"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nadouvvv", email = "nadoufmail@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CrabNadouf/Nadouf_Math_Library"
Repository = "https://github.com/CrabNadouf/Nadouf_Math_Library"
Documentation = "https://github.com/CrabNadouf/Nadouf_Math_Library/blob/main/README.md"

[tool.maturin]
module-name = "nadouf_math"
features = ["pyo3/extension-module"]
